Archive2/50/7bec6ba9b11006/output
main.cpp: In function 'int main()':
main.cpp:39:11: error: use of deleted function 'test::test(const test&)'
 test t2(t1);//copy constructor
           ^
main.cpp:9:5: error: declared here
     test(const test&) = delete;
     ^
